Correct language around Outreachy sponsorship leads
WIP that needs implementing:
 - create an email that is sent to Outreachy organizers when a
   coordinator updates the sponsorship leads
 - edit the way each field in the sponsorship leads form is displayed,
   adding the field description and help text that was agreed upon by
   Conservancy leadership
 - investigate why not all of the community sign up tests are passing

Outreachy is an initiative under the USA non-profit Software Freedom
Conservancy. This language change has been discussed by Conservancy
leadership, and Sage Sharp has provided this description of those
discussions to the best of their understanding.

USA charitable organization rules state that non-profit staff cannot
direct donations towards a particular purpose. Instead, the donor must
provide any donation instructions themselves. This means, for example,
that if a donor wants to give to the organization generally, the
charitable staff cannot direct the donation towards a more restrictive
temporarily earmarked fund.

As USA charitable organization staff and contractors, Outreachy
organizers must assume any organization wanting to sponsor Outreachy
wants the least restrictive donation.

By default, Outreachy and Conservancy must assume a sponsor wants to
donate to the Outreachy general activities fund. This is the least
restrictive earmarked fund available to Outreachy sponsors. The only
less restrictive donation would be to sponsor Conservancy, rather than
one of Conservancy's initiatives (Outreachy), but that would make the
donor a sponsor of Conservancy, not a sponsor of Outreachy.

Outreachy and Conservancy must also assume that if a sponsor says they
want to donate to "Outreachy internships" then the sponsor must want to
donate towards all Outreachy internships with any community. This is
less restrictive than donating towards Outreachy internships with a
particular FOSS community.

Supporting donations that are directed in a more restricti

--- a/home/templates/home/community_participation_rules.html
+++ b/home/templates/home/community_participation_rules.html
@@ -49,16 +49,10 @@ Community participation rules
 <h2>What you need to participate</h2>
 <hr>
 
-<h3>💵 Intern funding is required</h3>
+<h3>💵 Sponsorship Leads</h3>
 
 <div class="container mx-4">
-	<p>Open source communities must find <a href="{% url 'docs-community' %}#intern-funding">internship funding</a> (${{ current_round.sponsorship_per_intern|intcomma }} USD per intern):</p>
-	<ul>
-		<li>Humanitarian open source communities can apply for funding from the <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy general fund.</a></li>
-		<li>Open science communities can apply for funding from the <a href="{% url 'docs-community' %}#open-science-funding" %}>Outreachy general fund</a></li>
-		<li>Other communities must find funding elsewhere, either from community funds or from a community sponsor.</li>
-	</ul>
-	<p>Once funding for one intern is secured, communities can <a href="{% url 'docs-community' %}#partial-general-funding" %}>request additional funding</a> from the Outreachy general fund.</p>
+	{% include 'home/snippet/funding_short_description.html' %}
 </div>
 
 <h3>🗣️ A community coordinator is required</h3>
