--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -1,12 +1,4 @@
 {% load humanize %}
-{% comment %}Point coordinators to resources for finding and pitching to sponsors, once the community guide exists.{% endcomment %}
+<p>While we encourage any open source project to apply to Outreachy, we ask all communities to help Outreachy find donors to cover at least one intern (${{ current_round.sponsorship_per_intern|intcomma }} USD per intern). This includes both the internship stipend ($7,000 USD) we pay to interns, as well as an internship administrative fee ($1,000) to cover some of basic costs of running the Outreachy program.</p>
 
-<p>All communities must find finding for at least one intern (${{ current_round.sponsorship_per_intern|intcomma }} USD):</p>
-
-<ul>
-	<li><b>Humanitarian open source communities</b> can apply for funding from <a href="{% url 'docs-community' %}#outreachy-general-fund" %}>Outreachy</a></li>
-
-	<li><b>Other open source communities</b> need to find their own funding. Communities might use their own community funds, or find a company to sponsor an intern.</li>
-</ul>
-
-<p>All types of open source communities can apply to receive <a href='{% url 'docs-community' %}#outreachy-general-fund'>additional funding for interns</a>. However, funding for at least one intern must be secured first.</p>
+<p>We have <a href="https://www.outreachy.org/blog/2024-08-14/outreachy-needs-your-help/">very limited funds</a> available to fiscally support Outreachy internships with specific open source communities. If your community does not have budget for one intern, and you cannot help Outreachy find a donation lead, you can apply for the Outreachy program to fiscally support Outreachy interns working with your community. We understand that open source communities often face short-term financial issues, and Outreachy may be able to help, depending on our overall budget and priorities. Please <a href="{% url 'contact-organizers' %}">contact us</a> to discuss this further.</p>
