replace cohort placeholder with correct internship round

--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -12,14 +12,14 @@ Participation Info for {{ participation.community.name }}
 
 <p>Thank you for your interest in mentoring Outreachy interns!</p>
 
-<p>Please fill out the form below to sign your open source community up to participate in the COHORT Outreachy internship cohort.</p>
+<p>Please fill out the form below to sign your open source community up to participate in the {{ participation.participating_round.official_name }}.</p>
 
 <h2>Estimated number of interns</h2>
 
 <p>Please list the maximum number of interns your community has mentoring capacity to accept.
 </p>
 
-<p>How many interns (max) does your community want to accept this internship cohort?  Outreachy requires a 1:1 mentor to intern ratio. We encourage co-mentoring for a 2:1 mentor to intern ratio. We encourage communities who are new to Outreachy to only accept one or two interns.
+<p>How many interns (max) does your community want to accept this internship cohort? Outreachy requires a 1:1 mentor to intern ratio. We encourage co-mentoring for a 2:1 mentor to intern ratio. We encourage communities who are new to Outreachy to only accept one or two interns.
 </p>
 
 {% if view.kwargs.action == "submit" %}
