Sponsorship leads: finalize form, email organizers on submission
Finalize the fields and descriptions for the form community coordinators
use to give us leads about potential Outreachy sponsors. Some fields
needed longer text fields, so I switched them from a CharField to a
TextField. Some date fields are now optional, and should be saved as
blank dates (whereas before they were automatically saved as today's
date by default, which is not useful).

Send an email to Outreachy organizers whenever a coordinator edits the
form. Note that one community coordinator (who is a representative of
the sponsor) may fill out the form initially, and a second community
coordinator (who is not a representative of the sponsor) could then edit
the form. So it's useful to record in the email both who edited the
sponsorship info, and what sponsor relationship was originally provided.

Note that this will email Outreachy organizers if the sponsorship
information is deleted.

--- a/home/templates/home/snippet/coordinator_action.html
+++ b/home/templates/home/snippet/coordinator_action.html
@@ -1,6 +1,6 @@
 {% load humanize %}
 			<div class="card border-info mb-3">
-				<div class="card-header text-white bg-info">Coordinator actions for {{ community.name }}</div>
+				<div class="card-header text-white bg-info">Coordinator actions for {{ community.name }} in {{ participation_info.participating_round.official_name }}</div>
 				<div class="card-body">
 					{% if current_round and not current_round.internannounce.has_passed %}
 						<p class="card-text">
@@ -18,8 +18,8 @@
 						{% else %}
 						Your community has provided the following sponsorship leads:
 						<ul>
-							{% for s in participation_info.sponsor_set %}
-							<li>${{s.total_sponsorship_amount|intcomma }} USD from {{ s.name }}</li>
+							{% for s in participation_info.sponsorship_set.all %}
+							<li>${{ s.total_sponsorship_amount|intcomma }} USD from {{ s.name }}</li>
 							{% endfor %}
 						</ul>
 						{% endif %}
