--- a/home/templates/home/snippet/funding_short_description.html
+++ b/home/templates/home/snippet/funding_short_description.html
@@ -1,4 +1,25 @@
 {% load humanize %}
-<p>While we encourage any open source project to apply to Outreachy, we ask all communities to help Outreachy find donors to cover at least one intern (${{ current_round.sponsorship_per_intern|intcomma }} USD per intern). This includes both the internship stipend ($7,000 USD) we pay to interns, as well as an internship administrative fee ($1,000) to cover some of basic costs of running the Outreachy program.</p>
+<p>We encourage any open source community to apply to mentor Outreachy interns, and we need your help finding organizations to sponsor Outreachy.</p>
 
-<p>We have <a href="https://www.outreachy.org/blog/2024-08-14/outreachy-needs-your-help/">very limited funds</a> available to fiscally support Outreachy internships with specific open source communities. If your community does not have budget for one intern, and you cannot help Outreachy find a donation lead, you can apply for the Outreachy program to fiscally support Outreachy interns working with your community. We understand that open source communities often face short-term financial issues, and Outreachy may be able to help, depending on our overall budget and priorities. Please <a href="{% url 'contact-organizers' %}">contact us</a> to discuss this further.</p>
+<p><u>Donation amounts</u></p>
+<p>In order to sustain our program, Outreachy needs to receive donations of at least <b>${{ current_round.sponsorship_per_intern|intcomma }} to $10,000 USD per intern</b> we accept. This breaks down to:</p>
+<ul>
+	<li>$7,000 USD donation towards the Outreachy internship stipend</li>
+	<li>$1,000 to $3,000 USD donation towards the Outreachy program activities fund, which covers some of the basic costs of running the Outreachy program, and without which we couldn't run the internship program at all.</li>
+</ul>
+
+<p><u>Your support is vital to Outreachy interns</u></p>
+<p>We encourage organizations to donate additional funds to Outreachy program activities because Outreachy is a labor intensive program and <b>your additional donation helps us retain Outreachy interns in the open source community.</b></p>
+
+<p>Outreachy organizers are highly involved with encouraging your interns to pursue a future in open source. The Outreachy organizers share tips for your interns on how to attend FOSS conferences, encourage your interns to explore careers or academic research in open source, and help them expand their network of open source contracts.</p>
+
+<p>Outreachy's deep support of interns, along with your partnership, means <b>80% of past Outreachy interns continue to contribute to open source after their internship</b>.
+
+<p>We highly encourage organizations to provide an additional donation to help Outreachy sustain our deep support of interns, and retain their amazing talent in our open source community.</p>
+
+<p>Learn more about Outreachy sponsorship levels at <a href="https://www.outreachy.org/sponsor/">https://www.outreachy.org/sponsor/</a></p>
+
+<p><u>Financial support for some FOSS communities</u></p>
+<p>We understand that some open source communities may not have the funding for an Outreachy intern, and they may not know of organizations that want to sponsor Outreachy. Depending on Outreachy's budget and priorities, we may have some <a href="https://www.outreachy.org/blog/2024-08-14/outreachy-needs-your-help/">very limited funds</a> available to fiscally support Outreachy internships with specific open source communities. Whether we can support your community depends on our overall budget and priorities.</p>
+
+<p>Please <a href="{% url 'contact-organizers' %}">contact us</a> to discuss this further.</p>
